--- a/output.css
+++ b/output.css
@@ -449,7 +449,28 @@ video {
 }
 
 body{
+  overflow-x: hidden;
   font-family: Inter, sans-serif;
+}
+
+.container{
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 4rem;
+  height: 5rem;
+  max-width: 80rem;
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
+@media (min-width: 1024px){
+  .container{
+    margin-top: 8rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
 }
 
 *, ::before, ::after{
@@ -560,6 +581,40 @@ body{
   --tw-contain-style:  ;
 }
 
+.container{
+  width: 100%;
+}
+
+@media (min-width: 640px){
+  .container{
+    max-width: 640px;
+  }
+}
+
+@media (min-width: 768px){
+  .container{
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1024px){
+  .container{
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1280px){
+  .container{
+    max-width: 1280px;
+  }
+}
+
+@media (min-width: 1536px){
+  .container{
+    max-width: 1536px;
+  }
+}
+
 .fixed{
   position: fixed;
 }
@@ -583,6 +638,10 @@ body{
 
 .mb-10{
   margin-bottom: 2.5rem;
+}
+
+.mb-14{
+  margin-bottom: 3.5rem;
 }
 
 .mb-8{
@@ -609,6 +668,10 @@ body{
   display: flex;
 }
 
+.grid{
+  display: grid;
+}
+
 .hidden{
   display: none;
 }
@@ -621,12 +684,16 @@ body{
   height: 0.5rem;
 }
 
-.h-\[1000px\]{
-  height: 1000px;
+.h-20{
+  height: 5rem;
 }
 
 .h-\[1px\]{
   height: 1px;
+}
+
+.h-\[400px\]{
+  height: 400px;
 }
 
 .max-h-12{
@@ -706,6 +773,10 @@ body{
   cursor: pointer;
 }
 
+.grid-cols-2{
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+}
+
 .flex-col{
   flex-direction: column;
 }
@@ -738,6 +809,10 @@ body{
   gap: 1.25rem;
 }
 
+.gap-6{
+  gap: 1.5rem;
+}
+
 .gap-8{
   gap: 2rem;
 }
@@ -762,6 +837,15 @@ body{
   border-width: 1px;
 }
 
+.border-b{
+  border-bottom-width: 1px;
+}
+
+.border-black{
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+
 .border-gray-300{
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
@@ -782,9 +866,18 @@ body{
   border-color: rgb(202 138 4 / var(--tw-border-opacity));
 }
 
+.border-opacity-30{
+  --tw-border-opacity: 0.3;
+}
+
 .bg-gray-400{
   --tw-bg-opacity: 1;
   background-color: rgb(156 163 175 / var(--tw-bg-opacity));
+}
+
+.bg-gray-50{
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 250 251 / var(--tw-bg-opacity));
 }
 
 .bg-primary{
@@ -797,14 +890,14 @@ body{
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-yellow-400{
+.bg-yellow-100{
   --tw-bg-opacity: 1;
-  background-color: rgb(250 204 21 / var(--tw-bg-opacity));
+  background-color: rgb(254 249 195 / var(--tw-bg-opacity));
 }
 
-.bg-yellow-50{
+.bg-yellow-500{
   --tw-bg-opacity: 1;
-  background-color: rgb(254 252 232 / var(--tw-bg-opacity));
+  background-color: rgb(234 179 8 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-b{
@@ -820,6 +913,10 @@ body{
 .via-orange-50{
   --tw-gradient-to: rgb(255 247 237 / 0)  var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), #fff7ed var(--tw-gradient-via-position), var(--tw-gradient-to);
+}
+
+.bg-cover{
+  background-size: cover;
 }
 
 .object-cover{
@@ -855,6 +952,11 @@ body{
   padding-bottom: 0.25rem;
 }
 
+.py-12{
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
 .py-2{
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -874,6 +976,10 @@ body{
   padding-bottom: 8rem;
 }
 
+.pt-12{
+  padding-top: 3rem;
+}
+
 .pt-8{
   padding-top: 2rem;
 }
@@ -889,6 +995,11 @@ body{
 .text-2xl{
   font-size: 1.5rem;
   line-height: 2rem;
+}
+
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .text-5xl{
@@ -912,6 +1023,10 @@ body{
 .text-xl{
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.font-light{
+  font-weight: 300;
 }
 
 .font-medium{
@@ -1010,6 +1125,10 @@ body{
   border-color: rgb(31 41 55 / var(--tw-border-opacity));
 }
 
+.hover\:border-opacity-80:hover{
+  --tw-border-opacity: 0.8;
+}
+
 .hover\:bg-gray-50:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
@@ -1060,6 +1179,10 @@ body{
     font-size: 4.5rem;
     line-height: 1;
   }
+
+  .sm\:font-semibold{
+    font-weight: 600;
+  }
 }
 
 @media (min-width: 768px){
@@ -1093,11 +1216,28 @@ body{
 }
 
 @media (min-width: 1024px){
+  .lg\:mx-auto{
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   .lg\:flex{
     display: flex;
   }
 
   .lg\:hidden{
     display: none;
+  }
+
+  .lg\:h-\[450px\]{
+    height: 450px;
+  }
+
+  .lg\:w-1\/2{
+    width: 50%;
+  }
+
+  .lg\:flex-row{
+    flex-direction: row;
   }
 }
